Updating structure / merging with current live site.

--- a/daylight/SleepDataViz.html
+++ b/daylight/SleepDataViz.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 	<title></title>
 	<script src="/resources/d3.min.js" charset="utf-8"></script>
 	<script src="/script/daylight.js"></script>
