Setting up Git with host

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Brett W Byron</title>
 </head>
 <body>
-    <div id="construction"></div>
-    <div id="viz_link"><a href="./daylight/SleepDataViz.html">View my Daylight Vizualization</a></div>
+    <div id="construction" class="construction-class"></div>
+    <div id="viz_link" class="vizLink"><a href="./daylight/SleepDataViz.html">View my Daylight Vizualization</a></div>
 </body>
 </html>
