--- a/animoji.html
+++ b/animoji.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/1959eafa5f.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./resources/d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="./resources/snap.svg.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./script/home.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style/style.scss">
+    <script type="text/javascript" src="./script/animoji.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
     <title>Brett W Byron</title>
     <link rel="icon" type="image/png" href="/favicon.png">
 </head>
@@ -28,12 +28,8 @@
     </header> -->
     <main>
         <article>
-            <section>
-                <svg class="logo-animation" onclick="window.location.href=window.origin + '/animoji.html'">
-                    <path id="capital" class="capital" d="M11.2,300V11.7h155.5c0,0,39,2.3,48.5,41.1c8.8,35.9-18.1,51.3-18.1,51.3"/>
-                    <line id="stem" class="lower" x1="47.5" y1="300" x2="47.5" y2="36"/>
-                    <path id="bowl" class="lower" d="M131.5,288.6c-45.1,0-84-38.9-84-83.6s38.4-83.4,84-83.4s83.2,37.7,83.2,83.5 S178.3,288.6,131.5,288.6"/>
-                </svg>
+            <section onclick="window.loaction.href='https://www.brettwbyron.com/'">
+                <div id="animoji"></div>
             </section>
         </article>
     </main>
