--- a/index.html
+++ b/index.html
@@ -2,45 +2,43 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="https://kit.fontawesome.com/1959eafa5f.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./resources/d3.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./resources/snap.svg.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./script/home.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
-    <title>Brett W Byron</title>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="https://kit.fontawesome.com/1959eafa5f.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./resources/d3.min.js" charset="utf-8"></script>
+	<script type="text/javascript" src="./resources/snap.svg.js" charset="utf-8"></script>
+	<script type="text/javascript" src="./script/home.js"></script>
+	<link href="./style/style.css" rel="stylesheet" type="text/css" />
+	<title>Brett W Byron</title>
+	<link href="/favicon.png" rel="icon" type="image/png" />
 </head>
 
 <body>
-    <header>
-        <div class="logo"></div>
-        <nav>
-            <ul>
-                <li><a><i class="fa fa-home"></i></a></li>
-                <li><a>About</a></li>
-                <li><a>Projects</a></li>
-                <li><a>Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article>
-            <section>
-                <div class="logo-animation">
-                    <path class="capital" d="M11.2,300V11.7h155.5c0,0,39,2.3,48.5,41.1c8.8,35.9-18.1,51.3-18.1,51.3" />
-                    <path id="bowl" class="lower" d="M131.5,133c39.8,0,72,32.2,72,72s-32.2,72-72,72s-72-32.2-72-72C59.5,165.3,91.8,133,131.5,133 M131.5,110c-52.5,0-95,42.5-95,95s42.5,95,95,95s95-42.5,95-95S184,110,131.5,110z" />
-                    <rect id="stem" x="36" y="277" class="lower" width="23" height="23" /> <!-- final y="36" height="264" -->
-                </div>
-                <!-- <div class="construction"></div> -->
-            </section>
-        </article>
-    </main>
-    <footer>
+	<header>
+		<svg class="logo-animation animate" viewBox="0 0 228.77 299.9">
+			<path class="capital" d="M11.2,300V11.7h155.5c0,0,39,2.3,48.5,41.1c8.8,35.9-18.1,51.3-18.1,51.3" id="capital"></path>
+			<line class="lower" id="stem" x1="47.5" x2="47.5" y1="300" y2="36"></line>
+			<path class="lower" d="M131.5,288.6c-45.1,0-84-38.9-84-83.6s38.4-83.4,84-83.4s83.2,37.7,83.2,83.5 S178.3,288.6,131.5,288.6" id="bowl"></path>
+		</svg>
+		<nav class="hide">
+			<ul>
+				<li><a><i class="fa fa-home"></i></a></li>
+				<li><a>About</a></li>
+				<li><a>Projects</a></li>
+				<li><a>Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<article>
+			<section>
 
-    </footer>
+			</section>
+		</article>
+	</main>
+
+	<footer></footer>
 </body>
 
 </html>
